Fixed sliders for better vertical visibility; changed the design of the front page to fit on screen without scrolling

--- a/css/app.css
+++ b/css/app.css
@@ -252,21 +252,7 @@ input {
   [type="search"]::-webkit-search-cancel-button, [type="search"]::-webkit-search-decoration {
     -webkit-appearance: none; }
 
-/** Style for text input **/
-input[type="text"], input[type="password"] {
-    -webkit-appearance: none;
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-    color: gray;
-    width: 100%;
-    height: 40px;
-    margin: 10px auto;
-    border: none;
-    padding: 1px 2px;
-    border-radius: 14px;
-    background: #232528;
-    box-shadow: inset 0 1px 0 0 #0d0e0f, inset 0 -1px 0 0 #3a3d42;
-    -webkit-box-shadow: inset 0 1px 0 0 #0d0e0f, inset 0 -1px 0 0 #3a3d42;
-}
+
 
 /**
      * 1. Correct the inability to style clickable types in iOS and Safari.
@@ -385,7 +371,8 @@ body {
   font-weight: normal;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
+  -moz-osx-font-smoothing: grayscale;
+}
 
 img {
   display: inline-block;
@@ -427,27 +414,6 @@ button {
 }
   [data-whatinput='mouse'] button {
     outline: 0; }
-.gbutton {
-    border: 1px solid transparent;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #151515), color-stop(100%, black)); /* android <= 2.2 */
-    background-image: -webkit-linear-gradient(top, #151515 0, black 100%); /* older mobile safari and android > 2.2 */;
-    background-image: linear-gradient(to bottom, #151515 0, black 100%); /* W3C */
-  color: white;
-}
-
-.gbutton:active {
-    background: black;
-}
-
-.back {
-  padding: 0;
-  margin: 0 auto;
-  width: 30px;
-  height: 30px;
-  border: none;
-}
-
-
 
 .button {
   display: inline-block;
@@ -518,13 +484,6 @@ button {
 .button.hollow:hover, .button.hollow:focus {
   border-color: #0c3d5d;
   color: #0c3d5d; }
-
-
-.is-visible {
-  display: block !important; }
-
-.is-hidden {
-  display: none !important; }
 
 .row {
   max-width: 75rem;
@@ -908,35 +867,31 @@ a {
   text-align: justify; }
 
 
-[type='text'], [type='password'], [type='date'], [type='datetime'], [type='datetime-local'], [type='month'], [type='week'], [type='email'], [type='number'], [type='search'], [type='tel'], [type='time'], [type='url'], [type='color'],
-textarea {
-  display: block;
-  box-sizing: border-box;
-  width: 100%;
-  height: 2.4375rem;
-  margin: 0 0 1rem;
-  padding: 0.5rem;
-  border: 1px solid #cacaca;
-  border-radius: 0;
-  background-color: #fefefe;
-  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
-  font-family: inherit;
-  font-size: 1rem;
-  font-weight: normal;
-  color: #0a0a0a;
-  transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
+/** Style for text input **/
+input[type="text"], input[type="password"] {
   -webkit-appearance: none;
-     -moz-appearance: none;}
+  -webkit-tap-highlight-color: #232528;
+  color: gray;
+  width: 75%;
+  height: 40px;
+  margin: 3% 12.5%;
+  border-bottom: 1px solid white;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  padding: 1px 2px;
+  background: #2b2e31;
+}
   [type='text']:focus, [type='password']:focus, textarea:focus {
     outline: none;
-    border: 1px solid #8a8a8a;
-    background-color: #fefefe;
-    box-shadow: 0 0 5px #cacaca;
-    transition: box-shadow 0.5s, border-color 0.25s ease-in-out; }
+    color: white;
+    background-color:#1f1f1f;
+}
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-  color: #cacaca; }
+  color: #cacaca;
+}
 
 input::-moz-placeholder,
 textarea::-moz-placeholder {
@@ -983,54 +938,6 @@ label {
   .callout.primary {
     background-color: #d7ecfa;
     color: #0a0a0a; }
-  .callout.secondary {
-    background-color: #eaeaea;
-    color: #0a0a0a; }
-  .callout.success {
-    background-color: #e1faea;
-    color: #0a0a0a; }
-  .callout.warning {
-    background-color: #fff3d9;
-    color: #0a0a0a; }
-  .callout.alert {
-    background-color: #f7e4e1;
-    color: #0a0a0a; }
-  .callout.small {
-    padding-top: 0.5rem;
-    padding-right: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 0.5rem; }
-  .callout.large {
-    padding-top: 3rem;
-    padding-right: 3rem;
-    padding-bottom: 3rem;
-    padding-left: 3rem; }
-
-.label {
-  display: inline-block;
-  padding: 0.33333rem 0.5rem;
-  border-radius: 0;
-  font-size: 0.8rem;
-  line-height: 1;
-  white-space: nowrap;
-  cursor: default;
-  background: #1779ba;
-  color: #fefefe; }
-  .label.primary {
-    background: #1779ba;
-    color: #fefefe; }
-  .label.secondary {
-    background: #767676;
-    color: #fefefe; }
-  .label.success {
-    background: #3adb76;
-    color: #0a0a0a; }
-  .label.warning {
-    background: #ffae00;
-    color: #0a0a0a; }
-  .label.alert {
-    background: #cc4b37;
-    color: #fefefe; }
 
 
 .mobile-open {
@@ -1038,9 +945,9 @@ label {
 }
 
 .input-group {
-  padding: 10% 10%;
+  padding: 5% 5%;
   border: 1px solid #1779ba;
-  border-radius: 50px;
+  border-radius: 10px;
 }
 
 @media only screen and (max-width: 786px) and (orientation: portrait) {
@@ -1048,7 +955,7 @@ label {
       margin-top: 15%;
   }
     img#puppet {
-        height: 30vh;
+        height: 28vh;
     }
 } @media only screen and (max-width: 786px) and (orientation: landscape) {
     .mobile-open {
@@ -1060,13 +967,13 @@ label {
   }
 
   .input-group {
-      padding: 3% 3%;
+      padding: 2px 2px;
   }
 }
 
 @media only screen and (min-width: 786px) {
   .mobile-open {
-    margin-top: 2%;
+    margin-top: 10%;
   }
 
   img#puppet {
